<resources>
    <string name="changelog_full_title">更新日志</string>
    <string name="changelog_title">更新日志</string>
    <string name="coverview_tip">上滑可关闭此界面</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\
        本应用是基于Xmpp协议的一款轻量级即时通讯软件</string>
    <string name="login_help_information">Tips:帐号由ID+@+服务器IP!\n
        例如：way.ping.li@gmail.com,\n
   		或者：way@192.168.1.110</string>
    <string name="default_group">我的好友</string>
    <string name="AddContact_SpinnerPrompt">选择分组</string>
    <string name="RenameGroup_summ">重命名分组%s为:</string>
    <string name="RenameGroup_title">重命名分组</string>
    <string name="RenameEntry_summ">重命名%1$s(%2$s)为:</string>
    <string name="RenameEntry_title">重命名好友</string>
    <string name="MoveRosterEntryToGroupDialog_summ">请选择一个分组</string>
    <string name="MoveRosterEntryToGroupDialog_title">改变分组</string>
    <string name="deleteRosterItem_text">确定删除%1$s(%2$s)?</string>
    <string name="deleteRosterItem_title">删除好友</string>
    <string name="deleteChatHistory_text">确定清空与%1$s(%2$s)的聊天消息记录?</string>
    <string name="deleteChatHistory_title">删除最近会话</string>
    <string name="addFriend_Title">添加好友</string>
    <string name="addFriend_Summ">请输入对方帐号、备注名并选择分组</string>
    <string name="addFriend_aliasHint">备注名</string>
    <string name="addrosteritemaddgroupchoice">增加新分组</string>
    <string name="NewGroup_EditTextField_Hint">新分组名称</string>
    <string name="roster_contextmenu_title">%s选项</string>
    <string name="roster_contextmenu_group_rename">重命名分组</string>
    <string name="roster_group_rename_failed">默认分组不能重命名</string>
    <string name="roster_contextmenu_contact_delete">删除好友</string>
    <string name="roster_contextmenu_contact_delmsg">删除聊天记录</string>
    <string name="roster_contextmenu_contact_open_chat">公众聊天</string>
    <string name="roster_contextmenu_contact_rename">重命名</string>
    <string name="roster_contextmenu_contact_request_auth">请求认证</string>
    <string name="roster_contextmenu_contact_change_group">改变分组</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="textOn">"    "</string>
    <string name="textOff">"    "</string>
        <string name="textOn7">&#160;&#160;</string>
    <string name="textOff7">&#160;&#160;</string>
    <string name="next">下一步</string>
    <string name="rename">备注名</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="add">重发申请</string>
    <string name="open">打开</string>
    <string name="auto_save_password">记住密码</string>
    <string name="status_available">在线</string>
    <string name="status_away">离开</string>
    <string name="status_chat">Q我吧</string>
    <string name="status_dnd">请勿打扰</string>
    <string name="status_xa">隐身</string>
    <string name="status_offline">离线</string>
    <string name="status_busy">忙碌</string>
    <string name="status_online">在线</string>
    <string name="hide_login">隐身登录</string>
    <string name="info_accounts">使用TLS加密</string>
    <string name="silence_login">静音模式</string>
    <string name="com_tencent_open_appstore_dialog_tips">提示</string>
    <string name="com_tencent_open_appstore_dialog_confirm_text">是否确认退出游戏？</string>
    <string name="com_tencent_open_appstore_dialog_create_icon">创建游戏桌面图标</string>
    <string name="lite_title">我的电脑</string>
    <string name="lite_clean">清空</string>
    <string name="lite_select_file">选择发送内容</string>
    <string name="lite_delete">清空消息记录</string>
    <string name="lite_delete_msg">确认清空消息记录？</string>
    <string name="lite_resend">恢复发送</string>
    <string name="lite_resend_msg">文件发送失败，恢复发送该文件？</string>
    <string name="lite_resend_txt_msg">消息发送失败，恢复发送该消息？</string>
    <string name="lite_rereceive">恢复下载</string>
    <string name="lite_rereceive_msg">文件下载失败，恢复下载该文件？</string>
    <string name="lite_hint">温馨提示</string>
    <string name="lite_hint_send_msg">文件超过5M，当前为2G/3G网络，确定发送？</string>
    <string name="lite_hint_receive_msg">接收到新文件，当前为2G/3G网络，确定下载？</string>
    <string name="lite_ok">确定</string>
    <string name="lite_picture">图片</string>
    <string name="lite_video">视频</string>
    <string name="lite_file">文件</string>
    <string name="lite_text">文字</string>
    <string name="lite_fileInfo">媒体文件的信息</string>
    <string name="lite_fileSelect">被选中状态的图标</string>
    <string name="lite_send">发送</string>
    <string name="lite_picture_limit">最多只能选择20张图片</string>
    <string name="lite_video_limit">最多只能选择20个视频</string>
    <string name="lite_file_limit">最多只能选择20个文件</string>
    <string name="lite_file_invalid">该文件为无效文件</string>
    <string name="lite_need_pc_online">使用此功能，请先在电脑上登录QQ</string>
    <string name="lite_need_pc_update1">当前在电脑上登录的QQ版本过低请前往 http://im.qq.com 更新(仅支持QQ2013 Beta2及以上版本)</string>
    <string name="lite_need_pc_update2">(仅支持QQ2013 Beta2及以上版本)</string>
    <string name="lite_del">删除</string>
    <string name="lite_confim_del">确认删除此消息吗?</string>
    <string name="lite_cannot_open">没有应用程序可执行此操作</string>
    <string name="lite_no_sdcard">没有检测到SD卡，请插入SD卡！</string>
    <string name="lite_distance_get_pic">隔空取图</string>
    <string name="lite_no_distance_get_pic">当前版本暂不支持隔空取图，敬请期待。</string>
    <string name="datalineprompt">使用QQ数据线，可以在手机与电脑间互传数据， 支持文字、图片、视频，以及各种文件类型。</string>
    <string name="share_recent_title">最近</string>
    <string name="extension_share_to_qzone_progress">正在发送...</string>
    <string name="extension_share_success"> 分享成功</string>
    <string name="extension_share_fail"> 分享失败</string>
    <string name="extension_share_error_txt">请检查网络并重试</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="scan_qrcode_no_network">连接失败，请检查你的网络设置</string>
    <string name="scan_qrcode_out_of_memory">内存不足，无法生成二维码</string>
    <string name="scan_qrcode_result">扫描结果</string>
    <string name="extension_qrcode_scan_help_tips">"将取景框对准二维码，
即可自动扫描。"</string>
    <string name="qrcode_scan_no_camera_tips">"你的设备不支持拍照，
不能使用扫一扫。"</string>
    <string name="qrcode_scan_open_fail_tips">"打开摄像头失败，
请稍后再试。"</string>
    <string name="extension_qrcode_share_title">分享二维码</string>
    <string name="extension_qrcode_share_group_text">我正在使用手机QQ，扫一扫下面的二维码就能加入[nick]群，快来认识更多好朋友。</string>
    <string name="extension_qrcode_share_user_text">我正在使用手机QQ，扫一扫下面的二维码就能加我为好友，和我聊天。</string>
    <string name="scan_qrcode_processing">已扫描，正在处理...</string>
    <string name="scan_qrcode_not_found">未在图中发现二维码</string>
    <string name="album_btn">相册</string>
    <string name="light_on_btn">开灯</string>
    <string name="light_off_btn">关灯</string>
    <string name="qrcode_user_card_tips">扫一扫二维码图案，加我QQ。</string>
    <string name="qrcode_group_card_tips">扫一扫二维码图案，加入该群。</string>
    <string name="qrcode_group_card">群二维码</string>
    <string name="qrcode_user_card">我的二维码</string>
    <string name="qrcode_save_succ">已保存到手机相册</string>
    <string name="qrcode_save_fail">保存失败，无法写入存储卡</string>
    <string name="copy_to_clicpboard_succ">已复制到剪贴板</string>
    <string name="qrcode_card_save">保存到相册</string>
    <string name="scan_result_share">分享给好友/群</string>
    <string name="scan_result_copy">复制</string>
    <string name="scan_result_open">用浏览器打开</string>
    <string name="qrcode_open_url_title">是否打开链接？</string>
    <string name="open_qrcode_url_fail">打开链接失败，请确认你的系统浏览器设置是否正确</string>
    <string name="public_account_follow">关注</string>
    <string name="public_account_name">帐号</string>
    <string name="public_account_detail">详细资料</string>
    <string name="public_account_unfollow">取消关注</string>
    <string name="public_account_unfollow_tips">取消关注“xx”后将不再收到其下发的消息。</string>
    <string name="public_account_inequal_open_id">登录应用的QQ帐号与当前QQ帐号不一致，是否继续?</string>
    <string name="share_btn_continue">继续</string>
    <string name="public_account_not_browser">未找其他浏览器</string>
    <string name="public_account_waiting">请稍候…</string>
    <string name="public_account_unfollow_tip">正在取消关注…</string>
    <string name="public_account_follow_tip">正在关注…</string>
    <string name="public_account_network_error">操作失败，请检查你的网络设置</string>
    <string name="public_account_loadpage_error">加载失败，请检查你的网络设置</string>
    <string name="public_account_no_found">该服务已注销，你可以通过添加关注其他服务。</string>
    <string name="public_account_search">查找相关帐号</string>
    <string name="public_account_max_limit">你关注的服务号数量达到上限</string>
    <string name="file_assistant_title">我的文件夹</string>
    <string name="file_assistant_select_file">选择文件</string>
    <string name="file_assistant_edit">编辑</string>
    <string name="file_assistant_local_file">手机文件</string>
    <string name="file_assistant_cloud_file">云端文件</string>
    <string name="file_assistant_qq_offline_file">QQ离线文件</string>
    <string name="file_assistant_offline_file">离线文件</string>
    <string name="file_assistant_weiyun_file">微云文件</string>
    <string name="file_assistant_recent_file">最近文件</string>
    <string name="file_assistant_cloud_file_desc">收藏文件（微云）</string>
    <string name="file_assistant_offline_file_desc">中转文件</string>
    <string name="file_assistant_resume_send">文件发送失败，恢复发送该文件？</string>
    <string name="file_assistant_resume_recv">文件下载失败，恢复下载该文件？</string>
    <string name="file_assistant_resume_send_title">恢复发送</string>
    <string name="file_assistant_resume_recv_title">恢复下载</string>
    <string name="file_assistant_music">音乐</string>
    <string name="file_assistant_video">视频</string>
    <string name="file_assistant_file">文档</string>
    <string name="file_assistant_apk">安装包</string>
    <string name="file_assistant_other">其他</string>
    <string name="file_assistant_mobile_memory">手机内存</string>
    <string name="file_assistant_sdcard_memory">SD卡内存</string>
    <string name="file_assistant_qqdownload">已接收的文件</string>
    <string name="file_assistant_picture">图片</string>
    <string name="file_assistant_forward">转发</string>
    <string name="file_assistant_send">发送</string>
    <string name="file_assistant_save2cloudlet">存到微云</string>
    <string name="file_assistant_delete">删除</string>
    <string name="file_assistant_cancel">取消</string>
    <string name="file_assistant_viewer_more">查看更多</string>
    <string name="file_assistant_recvfrom">来自</string>
    <string name="file_assistant_recvfromweiyun">来自微云</string>
    <string name="file_assistant_sendto">发给</string>
    <string name="file_assistant_ontime">到期</string>
    <string name="file_assistant_norecord">没有最近文件记录</string>
    <string name="file_assistant_nofile">该分类没有文件</string>
    <string name="file_assistant_space">"  "</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="again_password">确认密码</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="again_password_input_prompt">请再次输入密码</string>
    <string name="str_login_menu_input_text">请输入服务器IP或者主机名称：</string>
    <string name="str_login_menu_input_ok">确定</string>
    <string name="str_login_menu_input_cancel">取消</string>
    <string name="str_dialog_menu_group_invite">邀请成员</string>
    <string name="str_dialog_menu_group_info_change">群信息更变</string>
    <string name="str_dialog_menu_group_kill_menber">踢出成员</string>
</resources>