<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@id/dialogRoot"
                style="@style/common_menu_dialog_layout_style"
                android:layout_width="300.0dip"
                android:layout_height="150.0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dialog_bg">


    <TextView
            android:id="@id/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_hei"
            android:text="@string/str_login_menu_input_text"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/edit_login_server_input"
            android:layout_alignRight="@+id/edit_login_server_input"
            android:layout_alignEnd="@+id/edit_login_server_input"/>
    <EditText
            android:id="@+id/edit_login_server_input"
            android:layout_width="200.0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/as_input_frame"
            android:hint="请输入IP或者主机名称"
            android:imeActionLabel="@string/next"
            android:maxLength="50"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textSize="17.829987dip"
            android:imeOptions="actionNext|flagNoExtractUi"/>
    <Button
            android:id="@+id/btn_login_server_ok"
            style="@style/login_Font"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@drawable/chat_send_button_bg"
            android:gravity="center"
            android:text="@string/str_login_menu_input_ok"
            android:textColor="#ffffffff"
            android:textSize="17.0sp"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/edit_login_server_input"
            android:layout_alignLeft="@id/dialogText"
            android:layout_alignStart="@id/dialogText"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/btn_login_server_cancel"
            style="@style/login_Font"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@drawable/chat_send_button_bg"
            android:gravity="center"
            android:text="@string/str_login_menu_input_cancel"
            android:textColor="#ffffffff"
            android:textSize="17.0sp"
            android:layout_marginRight="35dp"
            android:layout_below="@+id/edit_login_server_input"
            android:layout_alignRight="@id/dialogText"
            android:layout_alignEnd="@id/dialogText"
            android:layout_marginTop="10dp"/>
</RelativeLayout>