<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@id/dialogRoot"
                style="@style/common_menu_dialog_layout_style"
                android:layout_width="300.0dip"
                android:layout_height="200.0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dialog_bg">


    <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <Button
                android:id="@+id/dialog_menu_btn_group_chat_invite"
                style="@style/login_Font"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/chat_send_button_bg"
                android:gravity="center"
                android:text="@string/str_dialog_menu_group_invite"
                android:textColor="#ffffffff"
                android:textSize="17.0sp"/>
        <View android:layout_width="match_parent" android:layout_height="10dp"></View>
        <Button
                android:id="@+id/dialog_menu_btn_group_chat_info_change"
                style="@style/login_Font"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/chat_send_button_bg"
                android:gravity="center"
                android:text="@string/str_dialog_menu_group_info_change"
                android:textColor="#ffffffff"
                android:textSize="17.0sp"/>
        <View android:layout_width="match_parent" android:layout_height="10dp"></View>
        <Button
            android:id="@+id/dialog_menu_btn_group_chat_kill_menber"
            style="@style/login_Font"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/chat_send_button_bg"
            android:gravity="center"
            android:text="@string/str_dialog_menu_group_kill_menber"
            android:textColor="#ffffffff"
            android:textSize="17.0sp"/>
    </LinearLayout>
</RelativeLayout>